# proton-runner

./: .gitignore  README.md  pyproject.toml
example/: local-playbook.yml  playbook.yml  rebex-hosts  rebex-playbook.yml
src/proton_runner/: __main__.py  cli.py  executor.py  inventory.py  models.py  output.py  playbook.py
tests/: conftest.py  test_cli.py  test_executor.py  test_integration.py  test_inventory.py  test_playbook.py
