[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proton-runner"
version = "0.1.0"
description = "Command and control program for running tasks on multiple servers"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "asyncssh>=2.14",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
proton-runner = "proton_runner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proton_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
